added deeper network experiments

--- a/experiments-deep/control_dropout.ipynb
+++ b/experiments-deep/control_dropout.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "beec3fdf-884c-4ba2-9187-1768bef216a5",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
     "from torchvision import datasets, transforms\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from models_control import NetMCDropout\n",
+    "from models_control import NetNormalDropoutV2\n",
     "from torch.utils.data import DataLoader\n",
     "from tqdm import tqdm\n",
     "from torch.optim import Adam"
@@ -21,17 +21,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51fd564e",
+   "id": "ebdb303e",
    "metadata": {},
    "source": [
     "### Control experiment: Not using masks and no dropout\n",
-    "This notebook evaluates the performance of using MCMC-dropout. To clarify, not fixed dropout-masks\n",
-    "https://arxiv.org/pdf/1506.02142"
+    "This notebook evaluates the performance oof using a standard deep-net with 'normal' dropout layers in training which are removed at inferene"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "8fd47a49-430c-4746-8a71-37953fa95bab",
    "metadata": {},
    "outputs": [],
@@ -45,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "cf3c082b-1ba0-43dc-bfe5-79b01d2b9f54",
    "metadata": {},
    "outputs": [],
@@ -58,20 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "c569fb77",
    "metadata": {},
    "outputs": [],
    "source": [
     "BATCH_SIZE = 32\n",
-    "EPOCHS = 10\n",
+    "EPOCHS = 12\n",
     "NUM_MASKS = 1\n",
     "LR = 0.001"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "decc1b4c-7e4d-4e68-a60c-ac114500ce40",
    "metadata": {},
    "outputs": [],
@@ -79,24 +78,24 @@
     "seed = 42\n",
     "torch.manual_seed(seed)\n",
     "train_dataloader = DataLoader(dataset1, batch_size=BATCH_SIZE, shuffle=True)\n",
-    "test_dataloader = DataLoader(dataset2, batch_size=1, shuffle=False)"
+    "test_dataloader = DataLoader(dataset2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "112635f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = NetMCDropout(num_samples=20)\n",
+    "model = NetNormalDropoutV2()\n",
     "opt = Adam(model.parameters(), lr=LR)\n",
     "lossFn = torch.nn.NLLLoss() # Use NLL since we our model is outputting a probability\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "f9a859db",
    "metadata": {},
    "outputs": [
@@ -104,150 +103,180 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:28, 64.83it/s]\n"
+      "1875it [00:28, 64.98it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.62175\n",
-      "Total loss: 2552.5006822943687\n"
+      "Train Accuracy: 0.5317166666666666\n",
+      "Total loss: 2406.4092569947243\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:26, 71.44it/s]\n"
+      "1875it [00:33, 55.26it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.7794666666666666\n",
-      "Total loss: 1926.7738902568817\n"
+      "Train Accuracy: 0.6812666666666667\n",
+      "Total loss: 1665.401730120182\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:28, 65.92it/s]\n"
+      "1875it [00:26, 71.02it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.81615\n",
-      "Total loss: 1741.7803862690926\n"
+      "Train Accuracy: 0.7094\n",
+      "Total loss: 1520.6825696527958\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:32, 57.55it/s]\n"
+      "1875it [00:24, 77.30it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.8394333333333334\n",
-      "Total loss: 1626.6662584543228\n"
+      "Train Accuracy: 0.7282166666666666\n",
+      "Total loss: 1416.0007178410888\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:30, 61.46it/s]\n"
+      "1875it [00:26, 70.70it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.8547666666666667\n",
-      "Total loss: 1557.4918897151947\n"
+      "Train Accuracy: 0.7390166666666667\n",
+      "Total loss: 1351.6500516086817\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:36, 51.60it/s]\n"
+      "1875it [00:31, 60.25it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.8648333333333333\n",
-      "Total loss: 1508.1831324994564\n"
+      "Train Accuracy: 0.7423666666666666\n",
+      "Total loss: 1334.666971027851\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:45, 41.54it/s]\n"
+      "1875it [00:26, 71.31it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.8692666666666666\n",
-      "Total loss: 1479.7748703360558\n"
+      "Train Accuracy: 0.74885\n",
+      "Total loss: 1294.93528534472\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:41, 45.26it/s]\n"
+      "1875it [00:27, 67.96it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.8744666666666666\n",
-      "Total loss: 1453.6168915331364\n"
+      "Train Accuracy: 0.7549333333333333\n",
+      "Total loss: 1259.646432340145\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:35, 52.32it/s]\n"
+      "1875it [00:29, 64.37it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.8798833333333334\n",
-      "Total loss: 1433.8169458806515\n"
+      "Train Accuracy: 0.7566333333333334\n",
+      "Total loss: 1257.3940309658647\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:29, 63.45it/s]"
+      "1875it [00:27, 68.07it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.8838\n",
-      "Total loss: 1418.5267254412174\n"
+      "Train Accuracy: 0.7576333333333334\n",
+      "Total loss: 1244.1516629680991\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1875it [00:24, 75.95it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy: 0.7613\n",
+      "Total loss: 1225.1169779524207\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1875it [00:22, 83.03it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy: 0.7604666666666666\n",
+      "Total loss: 1226.0475217327476\n"
      ]
     },
     {
@@ -264,7 +293,7 @@
     "    trainCorrect = 0\n",
     "    totalLoss = 0\n",
     "    for idx, (x, y)  in tqdm(enumerate(train_dataloader)):\n",
-    "        logits = model.mc_dropout_predict(x)\n",
+    "        logits = model.forward(x)\n",
     "        loss = lossFn(logits, y)\n",
     "        totalLoss += loss.item()\n",
     "        opt.zero_grad()\n",
@@ -278,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "1c76d3c7",
    "metadata": {},
    "outputs": [
@@ -286,14 +315,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10000it [00:12, 821.94it/s]"
+      "10000it [00:05, 1916.54it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8811\n"
+      "0.9156\n"
      ]
     },
     {
@@ -308,7 +337,7 @@
     "test_correct = 0\n",
     "model.eval()\n",
     "for idx, (x, y)  in tqdm(enumerate(test_dataloader)):\n",
-    "    logits = model.mc_dropout_predict(x)\n",
+    "    logits = model.forward(x)\n",
     "    pred = torch.argmax(logits, dim=1)\n",
     "    test_correct += (pred == y).sum().item()\n",
     "print(test_correct / len(dataset2))"
