--- a/experiments-deep/control_mcmc_dropout.ipynb
+++ b/experiments-deep/control_mcmc_dropout.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "beec3fdf-884c-4ba2-9187-1768bef216a5",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
     "from torchvision import datasets, transforms\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from models_control import NetMCDropout\n",
+    "from models_control import NetMCDropoutV2\n",
     "from torch.utils.data import DataLoader\n",
     "from tqdm import tqdm\n",
     "from torch.optim import Adam"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "8fd47a49-430c-4746-8a71-37953fa95bab",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "cf3c082b-1ba0-43dc-bfe5-79b01d2b9f54",
    "metadata": {},
    "outputs": [],
@@ -58,20 +58,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "c569fb77",
    "metadata": {},
    "outputs": [],
    "source": [
     "BATCH_SIZE = 32\n",
     "EPOCHS = 10\n",
-    "NUM_MASKS = 1\n",
     "LR = 0.001"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "decc1b4c-7e4d-4e68-a60c-ac114500ce40",
    "metadata": {},
    "outputs": [],
@@ -84,19 +83,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "112635f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = NetMCDropout(num_samples=20)\n",
+    "model = NetMCDropoutV2(num_samples=20)\n",
     "opt = Adam(model.parameters(), lr=LR)\n",
     "lossFn = torch.nn.NLLLoss() # Use NLL since we our model is outputting a probability\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "f9a859db",
    "metadata": {},
    "outputs": [
@@ -104,150 +103,150 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:28, 64.83it/s]\n"
+      "1875it [01:25, 22.05it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.62175\n",
-      "Total loss: 2552.5006822943687\n"
+      "Train Accuracy: 0.6508333333333334\n",
+      "Total loss: 2742.368918955326\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:26, 71.44it/s]\n"
+      "1875it [01:08, 27.40it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.7794666666666666\n",
-      "Total loss: 1926.7738902568817\n"
+      "Train Accuracy: 0.8289166666666666\n",
+      "Total loss: 2174.770607292652\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:28, 65.92it/s]\n"
+      "1875it [01:08, 27.42it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.81615\n",
-      "Total loss: 1741.7803862690926\n"
+      "Train Accuracy: 0.8615833333333334\n",
+      "Total loss: 2062.0398649573326\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:32, 57.55it/s]\n"
+      "1875it [01:06, 28.25it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.8394333333333334\n",
-      "Total loss: 1626.6662584543228\n"
+      "Train Accuracy: 0.8808166666666667\n",
+      "Total loss: 1997.402498781681\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:30, 61.46it/s]\n"
+      "1875it [00:53, 34.75it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.8547666666666667\n",
-      "Total loss: 1557.4918897151947\n"
+      "Train Accuracy: 0.8912166666666667\n",
+      "Total loss: 1957.9469105005264\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:36, 51.60it/s]\n"
+      "1875it [00:43, 42.80it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.8648333333333333\n",
-      "Total loss: 1508.1831324994564\n"
+      "Train Accuracy: 0.8986333333333333\n",
+      "Total loss: 1932.7272303700447\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:45, 41.54it/s]\n"
+      "1875it [00:44, 42.47it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.8692666666666666\n",
-      "Total loss: 1479.7748703360558\n"
+      "Train Accuracy: 0.9042166666666667\n",
+      "Total loss: 1911.2175143957138\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:41, 45.26it/s]\n"
+      "1875it [00:56, 33.44it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.8744666666666666\n",
-      "Total loss: 1453.6168915331364\n"
+      "Train Accuracy: 0.9103833333333333\n",
+      "Total loss: 1884.7668615579605\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:35, 52.32it/s]\n"
+      "1875it [01:09, 26.95it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.8798833333333334\n",
-      "Total loss: 1433.8169458806515\n"
+      "Train Accuracy: 0.9120166666666667\n",
+      "Total loss: 1876.6839272975922\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:29, 63.45it/s]"
+      "1875it [01:26, 21.64it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.8838\n",
-      "Total loss: 1418.5267254412174\n"
+      "Train Accuracy: 0.9158166666666666\n",
+      "Total loss: 1865.5554565787315\n"
      ]
     },
     {
@@ -278,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "1c76d3c7",
    "metadata": {},
    "outputs": [
@@ -286,14 +285,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10000it [00:12, 821.94it/s]"
+      "10000it [00:34, 292.84it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8811\n"
+      "0.924\n"
      ]
     },
     {
