--- a/experiments-deep/mask_training.ipynb
+++ b/experiments-deep/mask_training.ipynb
@@ -13,7 +13,7 @@
     "from torchvision import datasets, transforms\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from model import Net, MCMC\n",
+    "from model import NetV2, MCMC\n",
     "from torch.utils.data import DataLoader, SequentialSampler\n",
     "from tqdm import tqdm\n",
     "from torch.optim import Adam"
@@ -71,10 +71,10 @@
    "outputs": [],
    "source": [
     "BATCH_SIZE = 32\n",
-    "EPOCHS = 10\n",
+    "EPOCHS = 15\n",
     "NUM_MASKS = 5\n",
     "LR = 0.001\n",
-    "dropout_probs=[0.6]"
+    "dropout_probs=[0.4, 0.6]"
    ]
   },
   {
@@ -109,22 +109,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Net(num_masks=NUM_MASKS, dropout_probs=dropout_probs)\n",
+    "model = NetV2(num_masks=NUM_MASKS, dropout_probs=dropout_probs)\n",
     "opt = Adam(model.parameters(), lr=LR)\n",
     "lossFn = torch.nn.NLLLoss() # Use NLL since we our model is outputting a probability\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "20cf824e",
-   "metadata": {},
-   "source": [
-    "#### Train using dividing groups so that the masks are able to see a larger portion of data"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "f9a859db",
    "metadata": {},
    "outputs": [
@@ -132,150 +124,225 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:11, 169.27it/s]\n"
+      "1875it [00:26, 70.91it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 82937.0 / 100000: 0.82937\n",
-      "Total loss: 1682.4998086839914\n"
+      "Train Accuracy: 58851.0 / 100000: 0.58851\n",
+      "Total loss: 3583.5722175836563\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:09, 193.70it/s]\n"
+      "1875it [00:25, 74.34it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 82917.0 / 100000: 0.82917\n",
-      "Total loss: 1667.89015513286\n"
+      "Train Accuracy: 78537.0 / 100000: 0.78537\n",
+      "Total loss: 2034.3618046939373\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:10, 176.67it/s]\n"
+      "1875it [00:26, 71.02it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 83332.0 / 100000: 0.83332\n",
-      "Total loss: 1647.0631706379354\n"
+      "Train Accuracy: 82927.0 / 100000: 0.82927\n",
+      "Total loss: 1645.286963492632\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:11, 162.77it/s]\n"
+      "1875it [00:31, 59.53it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 83391.0 / 100000: 0.83391\n",
-      "Total loss: 1623.7525143399835\n"
+      "Train Accuracy: 84666.0 / 100000: 0.84666\n",
+      "Total loss: 1477.6174337789416\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:17, 104.69it/s]\n"
+      "1875it [00:31, 59.02it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 83649.0 / 100000: 0.83649\n",
-      "Total loss: 1613.655190102756\n"
+      "Train Accuracy: 85828.0 / 100000: 0.85828\n",
+      "Total loss: 1371.9244211241603\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:19, 98.21it/s] \n"
+      "1875it [00:35, 53.25it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 83923.0 / 100000: 0.83923\n",
-      "Total loss: 1586.329080592841\n"
+      "Train Accuracy: 86612.0 / 100000: 0.86612\n",
+      "Total loss: 1294.7676348499954\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:18, 102.28it/s]\n"
+      "1875it [00:32, 57.19it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 84150.0 / 100000: 0.8415\n",
-      "Total loss: 1562.8938466086984\n"
+      "Train Accuracy: 87264.0 / 100000: 0.87264\n",
+      "Total loss: 1243.6770866177976\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:19, 97.39it/s] \n"
+      "1875it [00:32, 58.30it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 84157.0 / 100000: 0.84157\n",
-      "Total loss: 1557.5192259252071\n"
+      "Train Accuracy: 87523.0 / 100000: 0.87523\n",
+      "Total loss: 1192.9507208913565\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:19, 97.64it/s] \n"
+      "1875it [00:23, 78.40it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 84516.0 / 100000: 0.84516\n",
-      "Total loss: 1537.2687090560794\n"
+      "Train Accuracy: 88231.0 / 100000: 0.88231\n",
+      "Total loss: 1154.3681839052588\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:18, 99.12it/s] "
+      "1875it [00:23, 80.76it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 84529.0 / 100000: 0.84529\n",
-      "Total loss: 1533.5082539394498\n"
+      "Train Accuracy: 88611.0 / 100000: 0.88611\n",
+      "Total loss: 1115.5614146962762\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1875it [00:25, 72.95it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy: 88732.0 / 100000: 0.88732\n",
+      "Total loss: 1109.8045058771968\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1875it [00:24, 76.44it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy: 88806.0 / 100000: 0.88806\n",
+      "Total loss: 1090.1483276933432\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1875it [00:23, 81.03it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy: 89238.0 / 100000: 0.89238\n",
+      "Total loss: 1061.869417335838\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1875it [00:22, 82.37it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy: 89488.0 / 100000: 0.89488\n",
+      "Total loss: 1040.6780602792278\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1875it [00:24, 77.00it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy: 89519.0 / 100000: 0.89519\n",
+      "Total loss: 1033.5377450855449\n"
      ]
     },
     {
@@ -325,19 +392,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "dc8ebf46",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model = Net(num_masks=NUM_MASKS, dropout_probs=dropout_probs)\n",
+    "# model = NetV2(num_masks=NUM_MASKS, dropout_probs=dropout_probs)\n",
     "# model.load_state_dict(torch.load(\"../model.pth\", weights_only=True))\n",
     "# model.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "9e19ded4",
    "metadata": {},
    "outputs": [],
@@ -347,8 +414,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "76c30e77",
+   "execution_count": 11,
+   "id": "5d085d64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "3892a64c",
    "metadata": {},
    "outputs": [
@@ -367,9 +434,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:15, 120.81it/s]\n",
-      "1875it [00:17, 109.88it/s]\n",
-      "1875it [00:15, 124.01it/s]\n"
+      "1875it [00:17, 104.36it/s]\n",
+      "1875it [00:15, 120.37it/s]\n",
+      "1875it [00:14, 128.71it/s]\n"
      ]
     }
    ],
@@ -382,8 +449,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c3a86dd5",
+   "metadata": {},
+   "source": [
+    "This gives a bit more of a non-uniform distribution"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "78a9974f",
    "metadata": {},
    "outputs": [
@@ -391,7 +466,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.2102, 0.1951, 0.2031, 0.1974, 0.1942])\n"
+      "tensor([0.2153, 0.1761, 0.1937, 0.1733, 0.2416])\n"
      ]
     }
    ],
@@ -402,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "ef6a66ca",
    "metadata": {},
    "outputs": [
@@ -410,20 +485,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0, 2, 3])\n",
-      "torch.Size([3])\n"
+      "tensor([4, 0])\n",
+      "torch.Size([2])\n"
      ]
     }
    ],
    "source": [
-    "values, indices = torch.topk(dist, k=3)\n",
+    "values, indices = torch.topk(dist, k=2)\n",
     "print(indices)\n",
     "print(indices.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "65dc967b",
    "metadata": {},
    "outputs": [
@@ -431,17 +506,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]/Users/kunalkapur/Workspace/bayesian-ensemble/experiments-shallow/../model.py:249: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "0it [00:00, ?it/s]/Users/kunalkapur/Workspace/bayesian-ensemble/experiments-deep/../model.py:249: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  keep_indices = torch.tensor(keep_indices, dtype=torch.long)\n",
-      "10000it [00:08, 1199.46it/s]"
+      "10000it [00:12, 793.07it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy with all masks: 0.8717\n",
-      "Test accuracy with top 3: 0.87\n"
+      "Test accuracy with all masks: 0.9099\n",
+      "Test accuracy with top 3: 0.9023\n"
      ]
     },
     {
@@ -453,7 +528,7 @@
     }
    ],
    "source": [
-    "test_correct_top_3 = 0\n",
+    "test_correct_top_2 = 0\n",
     "test_correct = 0\n",
     "model.eval()\n",
     "for idx, (x, y)  in tqdm(enumerate(test_dataloader)):\n",
@@ -465,9 +540,9 @@
     "\n",
     "    logits = mcmc.predict(x, chosen_masks=indices)\n",
     "    pred = torch.argmax(logits, dim=1)\n",
-    "    test_correct_top_3 += (pred == y).sum().item()\n",
+    "    test_correct_top_2 += (pred == y).sum().item()\n",
     "print(f\"Test accuracy with all masks: {test_correct / len(dataset2)}\")\n",
-    "print(f\"Test accuracy with top 3: {test_correct_top_3 / len(dataset2)}\")"
+    "print(f\"Test accuracy with top 3: {test_correct_top_2 / len(dataset2)}\")"
    ]
   },
   {
@@ -475,30 +550,23 @@
    "id": "76628139",
    "metadata": {},
    "source": [
-    "## Test accuracy was 87% which is a somewhat stronger or as strong as controls and at least as strong as MCMC dropout"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6d9d1ea0",
-   "metadata": {},
-   "source": [
-    "### We show the number of overlapping neurons that can be pruned by finding the union-set of neurons between mask. In this case 206/256 neurons (~20% decrease). This is a somewhat smaller amount, but perhaps this result could carry on at a larger scale?"
+    "####  First Layer (428 / 512) neurons taken\n",
+    "#### Second layer (166 / 256) neurons taken"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "f7075951",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([206])"
+       "torch.Size([428])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,8 +581,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "476bd64b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([166])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indices_nonmasked = []\n",
+    "for index in indices:\n",
+    "    indices_nonmasked.append((torch.nonzero(model.dropout2.mask_dict[index.item()] == 0)))\n",
+    "\n",
+    "(torch.unique(torch.cat(tuple(indices_nonmasked)))).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63dd80ac",
    "metadata": {},
    "outputs": [],
    "source": []
