--- a/experiments-shallow/control_dropout.ipynb
+++ b/experiments-shallow/control_dropout.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "beec3fdf-884c-4ba2-9187-1768bef216a5",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
     "from torchvision import datasets, transforms\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from model_dropout import NetNormalDropout\n",
+    "from models_control import NetNormalDropout\n",
     "from torch.utils.data import DataLoader\n",
     "from tqdm import tqdm\n",
     "from torch.optim import Adam"
@@ -24,7 +24,7 @@
    "id": "ebdb303e",
    "metadata": {},
    "source": [
-    "### Control experiment: Not using masks and no dropout\n",
+    "### Control experiment: Not using masks with standard dropout\n",
     "This notebook evaluates the performance oof using a standard deep-net with 'normal' dropout layers in training which are removed at inferene"
    ]
   },
@@ -37,14 +37,14 @@
    "source": [
     "transform = transforms.Compose([\n",
     "    transforms.RandomRotation(degrees=180),\n",
-    "    transforms.ToTensor(), transforms.GaussianBlur(kernel_size=11, sigma=(5, 7)),  # Stronger blur\n",
+    "    transforms.ToTensor(), transforms.GaussianBlur(kernel_size=7, sigma=(4, 5)),  # Stronger blur\n",
     "    transforms.Lambda(lambda x: torch.flatten(x)),\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cf3c082b-1ba0-43dc-bfe5-79b01d2b9f54",
    "metadata": {},
    "outputs": [],
@@ -63,9 +63,9 @@
    "outputs": [],
    "source": [
     "BATCH_SIZE = 32\n",
-    "EPOCHS = 6\n",
+    "EPOCHS = 15\n",
     "NUM_MASKS = 1\n",
-    "LR = 0.01"
+    "LR = 0.001"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = NetNormalDropout(num_masks=NUM_MASKS)\n",
+    "model = NetNormalDropout()\n",
     "opt = Adam(model.parameters(), lr=LR)\n",
     "lossFn = torch.nn.NLLLoss() # Use NLL since we our model is outputting a probability\n"
    ]
@@ -110,90 +110,225 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:09, 190.41it/s]\n"
+      "1875it [00:08, 229.68it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.3834166666666667\n",
-      "Total loss: 3098.7840610146523\n"
+      "Train Accuracy: 0.49278333333333335\n",
+      "Total loss: 2664.430910408497\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:09, 194.89it/s]\n"
+      "1875it [00:08, 226.25it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.4459666666666667\n",
-      "Total loss: 2794.993779361248\n"
+      "Train Accuracy: 0.6377\n",
+      "Total loss: 1970.7157387137413\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:09, 193.20it/s]\n"
+      "1875it [00:15, 122.29it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.4585\n",
-      "Total loss: 2735.7522891163826\n"
+      "Train Accuracy: 0.6768166666666666\n",
+      "Total loss: 1740.2488400638103\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:09, 192.24it/s]\n"
+      "1875it [00:14, 133.72it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.4579\n",
-      "Total loss: 2742.133153319359\n"
+      "Train Accuracy: 0.6879166666666666\n",
+      "Total loss: 1659.981947928667\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:10, 184.77it/s]\n"
+      "1875it [00:13, 139.60it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.45855\n",
-      "Total loss: 2726.2131394147873\n"
+      "Train Accuracy: 0.7007833333333333\n",
+      "Total loss: 1588.5666856765747\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:10, 178.14it/s]"
+      "1875it [00:14, 131.36it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.46068333333333333\n",
-      "Total loss: 2724.1490750312805\n"
+      "Train Accuracy: 0.7049833333333333\n",
+      "Total loss: 1557.2589680850506\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1875it [00:14, 127.11it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy: 0.7123833333333334\n",
+      "Total loss: 1512.752326130867\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1875it [00:16, 112.19it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy: 0.7198\n",
+      "Total loss: 1482.9898345470428\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1875it [00:16, 112.59it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy: 0.7247833333333333\n",
+      "Total loss: 1449.2435713261366\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1875it [00:15, 121.99it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy: 0.7239666666666666\n",
+      "Total loss: 1447.843842536211\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1875it [00:14, 126.13it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy: 0.7269\n",
+      "Total loss: 1429.1121688783169\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1875it [00:15, 119.13it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy: 0.7284166666666667\n",
+      "Total loss: 1420.2725238204002\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1875it [00:17, 104.77it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy: 0.73275\n",
+      "Total loss: 1396.3104232549667\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1875it [00:18, 99.22it/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy: 0.73115\n",
+      "Total loss: 1391.8905310034752\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1875it [00:22, 82.19it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy: 0.73525\n",
+      "Total loss: 1378.7975038066506\n"
      ]
     },
     {
@@ -232,14 +367,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10000it [00:02, 4494.59it/s]"
+      "10000it [00:02, 4395.55it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5685\n"
+      "0.8374\n"
      ]
     },
     {
